# PracticeStuff

src/image_action_cpp/: CMakeLists.txt  package.xml
src/image_action_cpp/action/: ImageProcess.action
src/image_action_cpp/src/: image_action_client.cpp  image_action_server.cpp
src/modular_service_cpp/: CMakeLists.txt  package.xml
src/modular_service_cpp/include/modular_service_cpp/: service_client.hpp  service_server.hpp
src/modular_service_cpp/src/: service_client.cpp  service_client_impl.cpp  service_server.cpp  service_server_impl.cpp
src/simple_action_cpp/: CMakeLists.txt  package.xml
src/simple_action_cpp/action/: CountUntil.action
src/simple_action_cpp/src/: count_action_client.cpp  count_action_server.cpp
src/simple_service_cpp/: CMakeLists.txt  package.xml
src/simple_service_cpp/src/: simple_service_client.cpp  simple_service_server.cpp
src/simple_service_cpp/srv/: AddTwoInts.srv
