<package format="3">
  <name>simple_service_cpp</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 service example in C++</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>

  <!-- Exec dependencies -->
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

